Update README and Java module descriptions to include JVM internals and multithreading concepts. Enhance the main application to run new concurrency and JVM demos, reflecting the expanded learning scope in the `java-mastery` module.